--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ nav ul li a:hover {
 }
 
 /* Optional: Style for the YouTube link */
-nav ul li a[href*="youtube.com"] {
+nav ul li a[href*="https://www.youtube.com/@MagnaTeens"] {
     color: #FF0000; /* YouTube Red */
     font-weight: bold;
 }
