--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ header h1 {
 /* Game Project Section */
 #game-project {
     background-color: #f4f4f4;
-    color: dark gray;
+    color: gray;
     padding: 40px 0;
     text-align: centre;
 }
