--- a/styles.css
+++ b/styles.css
@@ -64,8 +64,8 @@ header h1 {
 .game-info {
     display: flex;
     flex-direction: column;
-    align-items: left;
-    text-align: left;
+    align-items: center;
+    text-align: center;
     gap: 20px;
 }
 
